--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         google()
         jcenter()
     }
+
+    // librar extensions here
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
